Added the other api calls
