# controllers/baseController.js
@@ -31,6 +31,7 @@ async function getSingle(req, res) {
 }
 
 async function deleteSingle(req, res){
+    // #swagger.description = 'Delete one recipe'
     try {
         const id = new ObjectId(req.params.id);
         const result = await mongodb.getDb().db('recipies').collection(req.baseUrl.substring(1)).deleteOne({_id:id});
@@ -44,8 +45,38 @@ async function deleteSingle(req, res){
     }
 };
 
+async function addSingle(req, res){
+    // #swagger.description = 'Add one recipe'
+    try {
+        const recipe = {ingredients: req.body.ingredients, RecipeTitle: req.body.RecipeTitle, prepTimeorbakingTime: req.body.prepTimeorbakingTime, comments: req.body.comments, instructions: req.body.instructions, utensils: req.body.utensils}
+        const result = await mongodb.getDb().db('recipies').collection(req.baseUrl.substring(1)).insertOne(recipe);
+        if(result){
+            res.status(200).send(result)
+        } else{
+            throw new Error('Some error occurred while deleting that recipe.')
+        }
+    } catch (error){
+      res.status(500).json(error.message || 'Some error occurred while deleting that recipe.')
+    }
+};
+
+async function editSingle(req, res){
+    // #swagger.description = 'Edit one recipe'
+    try {
+        const recipe = {ingredients: req.body.ingredients, RecipeTitle: req.body.RecipeTitle, prepTimeorbakingTime: req.body.prepTimeorbakingTime, comments: req.body.comments, instructions: req.body.instructions, utensils: req.body.utensils}
+        const id = new ObjectId(req.params.id);
+
+        const result = await mongodb.getDb().db('recipies').collection(req.baseUrl.substring(1)).replaceOne({_id:id},recipe);
+        if(result){
+            res.status(200).send(result)
+        } else{
+            throw new Error('Some error occurred while deleting that recipe.')
+        }
+    } catch (error){
+      res.status(500).json(error.message || 'Some error occurred while deleting that recipe.')
+    }
+};
 
 
 
-
-module.exports = {getAll, getSingle, deleteSingle}
+module.exports = {getAll, getSingle, deleteSingle, addSingle, editSingle}
