# routes/dessert.js
@@ -8,6 +8,12 @@ router.get('/:id', baseController.getSingle);
 // get all desserts
 router.get('/', baseController.getAll);
 
+// create a new desert
+router.post('/', baseController.addSingle);
+
+// update a desert by id 
+router.put('/:id', baseController.editSingle);
+
 // delete one dessert
 router.delete('/:id', baseController.deleteSingle)
 
